# zed-webrtc

./: README.md  install.sh
sendrecvzed/: CMakeLists.txt  appdata.c  appdata.h  appenum.h  main.c  pipeline.c  pipeline.h  runcam.sh  runviewer.sh  signaling.c  signaling.h
sendrecvzed/media/: recievemedia.c  recievemedia.h
sendrecvzed/my_webrtc/: my_datachannel.c  my_datachannel.h  my_webrtc.c  my_webrtc.h  negotiate.c  negotiate.h
